# fork-colornamer

./: README.md  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
colornamer/: colornamer.py
